--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="ELP-Activity8.js"></script>
 
     <script>
-        var languages = ["Html", "Php", "JavaScript", "ActionScript", "AppleScript", "Asp", "Lisp", "Perl", "Python"];
+        var languages = ["HTML", "CSS", "JavaScript", "Python", "Ruby", "Java", "C#", "Go", "Swift"];
 
         $(document).ready(function () {
             $("#BDate").datepicker();
