--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="ELP-Activity8.css">
+    <link rel="stylesheet" href="PARLAR-Activity8.css">
     <link rel="stylesheet" href="jquery-ui.css">
 
     <script src="jQuery.js"></script>
     <script src="jquery-ui.js"></script>
-    <script src="ELP-Activity8.js"></script>
 
     <script>
-        var languages = ["HTML", "CSS", "JavaScript", "Python", "Ruby", "Java", "C#", "Go", "Swift"];
+        var languages = ["Html", "Php", "JavaScript", "ActionScript", "AppleScript", "Asp", "Lisp", "Perl", "Python"];
 
         $(document).ready(function () {
             $("#BDate").datepicker();
